--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,23 +7,7 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script> 
-    <style>
-        #search {
-            background-color: #fff;
-            padding: 0 11px 0 13px;
-            width: 300px;
-            font-family: Roboto;
-            font-size: 15px;
-            font-weight: 300;
-            text-overflow: ellipsis;
-        }
-        #map-canvas{
-            height: 500px;
-            width: 100%;
-        }
-    </style>
-
-
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <body>
         <script>
 
