--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <body>
         <script>
+//iuj
 
             var gjson;
             var map;
