--- a/public_html/example.html
+++ b/public_html/example.html
@@ -5,42 +5,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="js/js.js"></script>
 
     </head>
     <body>
-        <script>
-            function validateEmail() {
-                var sEmail = document.getElementById('email').value;
-                var filter = /^([\w-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([\w-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$/;
-                if (filter.test(sEmail)) {
-                    document.getElementById('emer').style.visibility = 'hidden';
-                    return true;
-                }
-                else {
-                    document.getElementById('emer').style.visibility = 'visible';
-                    return false;
-                }
-            }
-            function sentData() {
-                if (validateEmail())
-                    $.ajax({
-                        type: "POST",
-                        url: "example.php",
-                        data: "name=" + document.getElementById('name').value + "&email=" + document.getElementById('email').value,
-                    }).success(function(msg) {
-                        alert(msg);
-                    }).fail(function(xmlHttpRequest, statusText, errorThrown) {
-                        alert(
-                                "Your form submission failed.\n\n"
-                                + "XML Http Request: " + JSON.stringify(xmlHttpRequest)
-                                + ",\nStatus Text: " + statusText
-                                + ",\nError Thrown: " + errorThrown);
-                    });
-            }
-            $(document).ready(function() {
-
-            });
-        </script>
         <input id="name" type="text">
         <input id="email" onblur="validateEmail()" type="text">
         <input id="submit" onclick="sentData()" type="button" value="Submit">
