--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,6 +22,13 @@
         <button onclick="price()">Get Price </button>
         <input id="search" type="text" 
                placeholder="Search">
+        <span>Select the map type:</span>
+        <select onchange="mapType()" id="maptype">
+            <option value="HYBRID">HYBRID</option>
+            <option value="ROADMAP">ROADMAP</option>
+            <option value="SATELLITE">SATELLITE</option>
+            <option value="TERRAIN">TERRAIN</option>
+        </select>
         <div id="json" onclick=""></div>
         <div id="map-canvas" style="
              height: 500px;
