--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,31 +14,25 @@
             google.maps.event.addDomListener(window, 'load', initialize);
         </script>
 
-        <input id="pickup" type="text"
-               placeholder="From">
-        <input id="dropoff" type="text"
-               placeholder="To">
-        <input type="button" onclick="route()" value="Get Route">
-        <button onclick="price()">Get Price </button>
-        <input id="search" type="text" 
-               placeholder="Search">
-        <span>Select the map type:</span>
+        <input id="search" type="text" placeholder="Search">
         <select onchange="mapType()" id="maptype">
             <option value="HYBRID">HYBRID</option>
             <option value="ROADMAP">ROADMAP</option>
             <option value="SATELLITE">SATELLITE</option>
             <option value="TERRAIN">TERRAIN</option>
         </select>
-        <div id="json" onclick=""></div>
-        <div id="map-canvas" style="
-             height: 500px;
-             width: 600px;"></div>
-        <div id="right" style="
-             position: absolute;
-             right: 3px;
-             top: 40px;
-             height: 400px;
-             width: 600px">
+        <div id="json">
+        </div>
+        <div id="map-canvas">
+        </div>
+        <div id="right">
+            <input id="pickup" type="text"
+                   placeholder="From">
+            <input id="dropoff" type="text"
+                   placeholder="To">
+            <input type="button" onclick="route()" value="Get Route">
+            <button onclick="price()">Get Price </button>  
+            <br>
         </div>
     </body>
 </html>
