--- a/public_html/index.html
+++ b/public_html/index.html
@@ -33,9 +33,9 @@
                         $('#hide').show();
                     }">Hide this controls</button><br>
             <input id="pickup" type="text"
-                   placeholder="From">
+                   placeholder="From"><br>
             <input id="dropoff" type="text"
-                   placeholder="To">
+                   placeholder="To"><br>
             <input type="button" onclick="route()" value="Get Route">
             <button onclick="price()">Get Price </button>  
             <br>
