--- a/public_html/index.html
+++ b/public_html/index.html
@@ -39,7 +39,7 @@
             <input class="options" type="button" onclick="route()" value="Get Route">
             <button class="options" onclick="price()">Get Price </button>  
             <br>
-            <div class='options' id="json">
+            <div class='options' id="info">
             </div>
         </div>
     </body>
