--- a/public_html/formular.html
+++ b/public_html/formular.html
@@ -10,16 +10,23 @@
 
     </head>
     <body>
+        <button id="hide" onclick="{
+                    $('#signup').show(1000);
+                    $('#hide').hide(1000);
+                }">Show more controls</button>
         <div id="signup">
-            First Name:<input id="fName"  type="text" required><br>
-            Last Name:<input id="lName" type="text" required><br>
-            E-mail:<input id="email" onblur="validateEmail();" type="text" required>
-            <span id="emer" class="error">You need to type e valid email address.</span><br>
-            Password:<input id="pass1" onblur="validatePassword();" type="password" required>
-            <span id="p1er" class="error">Please enter your password must include one of the following
-                characters a-z,A-Z,0-9, and have at least 8 characters. </span><br>
-            <input id="submit" onclick="sentData()" type="submit" value="Submit"><br>
+            First Name:<input id="fName" onblur="req()" type="text" required><br>
+            Last Name:<input id="lName" onblur="req()" type="text" required><br>
+            E-mail:<input id="email" onblur="validateEmail();" type="text" required><br>
+            Password:<input id="pass1" onmouseover="document.getElementById('hint').style.visibility = 'visible'" 
+                            onmouseout="document.getElementById('hint').style.visibility = 'hidden'"
+                            onblur="validatePassword();" type="password" required>
+            <br>
+            <input id="submit" onclick="sentData()" onblur="req()" type="submit" value="Submit"><br>
             <div class="error" id="err">Please complete all the fields</div>
+            <span id="emer" class="error">You need to type e valid email address.</span><br>
+            <span id='hint' style="visibility: hidden;">Your password must include one of the following
+                characters a-z,A-Z,0-9, and have at least 8 characters. </span>
         </div>
 
     </body>
