modification in style of the page

--- a/public_html/formular.html
+++ b/public_html/formular.html
@@ -10,11 +10,12 @@
 
     </head>
     <body>
-        <button id="sup" onclick="{
+        <button class="but" id="sup" onclick="{
                     $('#login').hide(1000);
                     $('#signup').toggle(1000);
                 }">Sign up</button>
-        <button id="sip" onclick="{
+        <br>
+        <button class="but" id="sin" onclick="{
                     $('#signup').hide(1000);
                     $('#login').toggle(1000);
                 }">Log in</button>
