Added some more graphics

--- a/public_html/formular.html
+++ b/public_html/formular.html
@@ -10,43 +10,37 @@
 
     </head>
     <body>
-        <button class="but" id="sup" onclick="{
-                    $('#login').hide(1000);
-                    $('#signup').toggle(1000);
-                }">Sign up</button>
+        <button class="but" id="sup" onclick="buton('#login', '#signup')">Sign up</button>
         <br>
-        <button class="but" id="sin" onclick="{
-                    $('#signup').hide(1000);
-                    $('#login').toggle(1000);
-                }">Log in</button>
-        <div id="signup" class="sign">
-            First Name:<input id="fName" onblur="req()" type="text" required><br>
-            Last Name:<input id="lName" onblur="req()" type="text" required><br>
-            User Name:<input id="user" onblur="req()" type="text" required><br>
-            E-mail:<input id="email" onblur="validateEmail();" type="text" required><br>
-            Password:<input id="pass" onmouseover="document.getElementById('hint').style.visibility = 'visible'" 
-                            onmouseout="document.getElementById('hint').style.visibility = 'hidden'"
-                            onblur="validatePassword();" type="password" required><br>
-            <input id="submit" onclick="{
-                        sentData();
-                        $('#signup').hide(1000);
-                    }"  type="submit" value="Submit"><br>
-            <div class="error" id="err">Please complete all the fields</div>
-            <span id="emer" class="error">You need to type e valid email address.</span><br>
-            <span id="pass1" class="error">Your password is invalid</span><br>
-            <span id='hint' style="visibility: hidden;">Your password must include one of the following
-                characters a-z,A-Z,0-9, and have between 6 and 20 characters.</span>
-        </div>
+        <button class="but" id="sin" onclick="buton('#signup', '#login')">Log in</button>
+        <div id="log">
+            <button id="close" onclick="inchide()">x</button>
+            <div id="signup" class="sign">
+                First Name:<input id="fName" onkeypress="enterPressAlert(event,1)" onblur="req()" type="text" required><br>
+                Last Name:<input id="lName" onkeypress="enterPressAlert(event,1)" onblur="req()" type="text" required><br>
+                User Name:<input id="user"  onkeypress="enterPressAlert(event,1)" onblur="req()" type="text" required><br>
+                E-mail:<input id="email" onkeypress="enterPressAlert(event,1)" onblur="validateEmail();" type="text" required><br>
+                Password:<input id="pass" onkeypress="enterPressAlert(event,1)" onmouseover="document.getElementById('hint').style.visibility = 'visible'" 
+                                onmouseout="document.getElementById('hint').style.visibility = 'hidden'"
+                                onblur="validatePassword();" type="password" required><br>
+                <input id="submit" onclick="sentData()"  type="submit" value="Submit"><br>
+                <div class="error" id="err">Please complete all the fields</div>
+                <span id="emer" class="error">You need to type e valid email address.</span><br>
+                <span id="pass1" class="error">Your password is invalid</span><br>
+                <span id='hint' style="visibility: hidden;">Your password must include one of the following
+                    characters a-z,A-Z,0-9, and have between 6 and 20 characters.</span>
+            </div>
 
-        <div id="login" class="sign">
+            <div id="login" class="sign">
 
 
-            User Name:<input id="luser" onblur="" type="text" required><br>
-            Password:<input id="lpass" onblur="" type="password" required><br>
-            <input id="lsubmit" onclick="{
-                        login();
-                        $('#login').hide(1000);
-                    }" type="submit" value="Submit"><br>
+                User Name:<input id="luser" onkeypress="enterPressAlert(event,2)" onblur="" type="text" required><br>
+                Password:<input id="lpass" onkeypress="enterPressAlert(event,2)" onblur="" type="password" required><br>
+                <input id="lsubmit" onclick="{
+                            login();
+                            inchide();
+                        }" type="submit" value="Submit"><br>
+            </div>
         </div>
 
     </body>
